--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@ group 'bIRC'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.0.5-eap-117'
+    ext.kotlin_version = '1.1.1'
     ext.dokka_version = '0.9.13'
 
     repositories {
     	jcenter()
-        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
         mavenCentral()
     }
     dependencies {
@@ -23,7 +22,6 @@ apply plugin: 'org.jetbrains.dokka'
 sourceCompatibility = 1.8
 
 repositories {
-    maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
     mavenCentral()
 }
 
